# einsummable

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Einsummable_EndToEnd.cc  LICENSE  README.md  asd01.cc  cmake_build_script.txt  compile  cuda_graph.dot  cuda_graph_km.dot  fusion_results.txt  test.txt
.github/workflows/: main.yml
containers/: CMakeCache.txt  cpuengine.def  cpuengine_sp.def  cuda.def  cutensor.def  mklmpich.def  mpich.def  standard.def
exps/: GPU_chain_mul.cc  GPU_correctness.cc  GPU_ff_test.cc  GPU_test.cc  GPU_xtreme.cc  abc.cc  allocator_test.cc  apart.cc  asd01.cc  autodiff_test.cc  autograph.cc  autoplace.cc  base_test.cc  copyregion.cc  coster.cc  cpoint.cc  cpu_comm.cc  cpu_engine.cc  cpu_engine_lff.cc  cpu_engine_ml.cc  cpu_engine_run.cc  cpu_engine_server.cc  cpu_ge.cc  cpuexec.cc  cpuexec_3d.cc  cpuexec_attention.cc  cpuexec_ew.cc  cpuexec_ff.cc  cpuexec_gen.cc  cpuexec_kernels.cc  cpuexec_lff.cc  cpuexec_matmul.cc  cpuexec_mm.cc  cpuexec_multiplemm.cc  cpuexec_permute.cc  cpuexec_st.cc  cpuexec_touch.cc  cpuexeccompare.cc  cpukerneltime.cc  cpumanager.cc  (+53 more)
llama/: asd.cc  asd01.cc  autodiff_test.cc  autodiff_test.py  autodiff_test_jax.py  build_graph.cc  builder.cc  builder.h  cpoint.cc  cpu.cc  cpu2.cc  cpuexecllama.cc  cpusplit.cc  dataset_reader.cc  dataset_reader.h  ew_fusion_00.cc  exp01.cc  exp02.cc  exp03.cc  exp_apart03.cc  first_token.cc  from_pth2.py  gpu.cc  gpu_inference_info.cc  gpu_llama.cc  gpu_llama.h  gpu_matmul.cc  gpu_model_parallel.cc  gpu_no_server.cc  gpu_train.cc  gpu_training_info.cc  gpuexecllama.cc  gpullamacompile.cc  inference_exp.cc  load_weights.cc  main.cc  memoryusage.cc  misc.cc  misc.h  modules.cc  (+12 more)
python/: pyserver_test.py
python/src/: bindings.cc
src/: copyregion.h  coster.cc  coster.h  einsummable.cc  einsummable.h  graph.cc  graph.h  indexer.cc  indexer.h  partdim.cc  partdim.h  partition.cc  partition.h  placement.h  reference.cc  reference.h  setup.cc  setup.h  task_graph.h  taskgraph.cc  taskgraph.h  tensor.h
src/autoplace/: aggplan.cc  aggplan.h  alocate.cc  alocate.h  apart.cc  apart.h  autolinns.cc  autolinns.h  autolinns2.cc  autolinns2.h  autopart.cc  autopart.h  autoplace.cc  autoplace.h  bcost.cc  bcost.h  buildtrees.h  cluster.cc  cluster.h  forwardsim.cc  forwardsim.h  forwardsim1.h  fsmcmc.cc  fsmcmc.h  gwise.cc  gwise.h  loadbalanceplace.cc  loadbalanceplace.h  locsetter.cc  locsetter.h  mcts1.cc  mcts1.h  relationwise.cc  relationwise.h  rwmcmc.cc  rwmcmc.h  twolayer.cc  twolayer.h
src/base/: args.h  buffer.cc  buffer.h  copyregion.cc  copyregion.h  hrect.cc  hrect.h  indexer.cc  indexer.h  partdim.cc  partdim.h  partition.cc  partition.h  partition_.h  permute.cc  permute.h  permute_.h  placement.cc  placement.h  setup.cc  setup.h  tensor.h  timeplot.cc  timeplot.h  timetracker.cc  timetracker.h  vtensor.h
src/einsummable/: antplacer.cc  antplacer.h  backprop.cc  cluster.h  copyregion.cc  copyregion.h  coster.cc  coster.h  dbuffer.cc  dbuffer.h  einsummable.cc  einsummable.h  fill.cc  fill.h  forwardsim.cc  forwardsim.h  forwardsim1.cc  forwardsim1.h  fusion.cc  fusion.h  graph.cc  graph.h  gwriter.cc  gwriter.h  loadbalanceplace.cc  loadbalanceplace.h  locsetter.h  mcts1.cc  mcts1.h  memgraph.cc  memgraph.h  mgallocator.cc  mgallocator.h  mgmake.cc  mgmake.h  mgmakeold.cc  mgmakeold.h  partdim.cc  partdim.h  placement.h  (+24 more)
src/engine/: channel_manager.cc  channel_manager.h  comm_util.cc  comm_util.h  communicator.cc  communicator.h  exec_graph.cc  exec_graph.h  exec_state.cc  exec_state.h  managers.cc  managers.h  notifier.cc  notifier.h  numa.cc  numa.h  repartition.cc  repartition.h  resource_manager.cc  resource_manager.h  threadpool.cc  threadpool.h  touch.cc  touch.h
src/engine/cpu/: contraction.cc  contraction.h  exec_graph.cc  exec_nodes.h  kernel_executor.cc  kernel_executor.h  kernel_manager.h  permute.h  storage.cc  storage.h  storage_manager.h  workspace_manager.cc  workspace_manager.h
src/engine/cpu/mg/: exec_graph.cc  exec_nodes.h  storage.cc  storage.h  storage_manager.h  workspace_manager.cc  workspace_manager.h
src/engine/cpu/tg/: data_manager.cc  data_manager.h  exec_graph.cc  exec_nodes.h
src/engine/gpu/: cuda_kernels.cu  cuda_kernels.h  exec_graph.cc  exec_nodes.h  execute_multi_gpu.cc  gpu_communicator.cc  gpu_kernel_manager.cc  gpu_kernel_manager.h  kernels.cc  kernels.h  storage.cc  storage.h  storage_manager.h  stream_pool.cc  stream_pool.h  to_cudagraph.cc  to_cudagraph.h  to_streamlist.cc  to_streamlist.h  utility.cc  utility.h  workspace.cc  workspace.h
src/execution/cpu/: contraction.cc  contraction.h  elementwise.cc  elementwise.h  execute.cc  execute.h  executemg.cc  executemg.h  executetg.cc  executetg.h  executetg2.cc  executetg2.h  kernels.cc  kernels.h  manager.cc  manager.h  mpi_class.cc  mpi_class.h  numa.h  permute.cc  permute.h  permute_.h  repartition.cc  repartition.h  storage.cc  storage.h  workspace.cc  workspace.h
src/execution/generic/: ThreadPool.cc  ThreadPool.h  execute_state.cc  execute_state.h
src/execution/gpu/: cuda_kernels.cu  cuda_kernels.h  dummy_kernels.cu  dummy_kernels.h  einsummable.code-workspace  execute.cc  execute.h  execute_multi_gpu.cc  execute_multi_gpu.h  gpu_communicator.cc  gpu_communicator.h  gpu_kernel_manager.cc  gpu_kernel_manager.h  gpu_kernels.cc  kernels.cc  kernels.h  utility.cc  utility.h  workspace.cc  workspace.h
src/llama/: build_graph.cc
src/matgraph/: matgraph.cc  matgraph.h
src/matrixgraph/: ff.cc  ff.h  matrixgraph.cc  matrixgraph.h
src/misc/: .update.h.swp  checkpoint.cc  checkpoint.h  update.cc  update.h
src/proto/: CMakeLists.txt  einsummable.proto
src/server/: base.cc  base.h  dist_base.cc  mg_base.cc  trainer.cc  trainer.h
src/server/cpu/: mg_server.cc  mg_server.h  server.cc  server.h  tg_server.cc  tg_server.h
src/server/gpu/: server.cc  server.h
tests/: base.cc  partdim.h  reference.h  test.cc  test.h
